fix: fixed merge failures in table.jade; added ng-hide option for color-bucket in viz.jade; z-index for progress overlay updated

--- a/app/editor/table/table.styl
+++ b/app/editor/table/table.styl
@@ -2,6 +2,8 @@
     font-size 14px
 
     .settings-bar
+        margin-left 2px
+
         .header-button
             position relative
 
